recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:22: error: not found: value n
    forward(n)
            ^